# perses

./: .dockerignore  .gitignore  BUILD  DIFFERENTIAL_FUZZING_IMPLEMENTATION.md  Dockerfile  README-Docker.md  README.md  docker-compose.yml  package-lock.json  package.json  perses.bzl  prepare_seeds.sh  run-differential-testing.sh  run_kitten_docker.txt  test_build.sh
benchmark/: benchmark.bzl  check-benchmark-validity.sh  grep-runtime-stat.sh  perses_wrapper.sh  run-all.sh  run-exp.sh  run_benchmark_ppr.py  sanity_test.sh  start_docker.sh
benchmark/binaries/: run_atn_fine_tuning.sh  run_common.sh  run_creduce.sh  run_ppr.sh  run_token_counter.sh  update_atn_perses_main.sh  update_perses.sh  update_ppr.sh  update_token_counter.sh
benchmark/clang-18556/: r.sh
benchmark/clang-18596/: r.sh
benchmark/clang-19595/: r.sh
benchmark/clang-20680/: r.sh
benchmark/clang-21467/: r.sh
benchmark/clang-21582/: r.sh
kitten/: README.md
readme_generator/: BUILD  build_and_use.template.md  header.segment.md  license.segment.md  publication.segment.md
scripts/: .gitignore  check_copyright.sh  check_prerequisite.sh  cleanup.sh  constants.sh  copy_to_public_repo.sh  format_bazel_files.sh  format_shell_scripts.sh  git-clean.sh  install_hooks.sh  install_perses.sh  presubmit.sh  release.py  rsync.sh  run_detekt.sh  run_ktlint.sh  sync_with_public_repo.sh  test_install_perses.sh  update_contributor_file.py  update_golden_files.sh
src/org/perses/listminimizer/localexhaust/: BUILD.bazel  ElementEditPattern.kt  EnumOperation.kt  NumOfDeletesToPatterns.kt
(+1365 files in other folders)
