load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "localexhaust",
    srcs = [
        "ElementEditPattern.kt",
        "EnumOperation.kt",
        "NumOfDeletesToPatterns.kt",
    ],
    deps = [
        "//:guava",
        "//src/org/perses/util",
    ],
)
